<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020, Egeniq
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="programguide_title_no_program">No broadcast</string>
    <string name="programguide_error_fetching_content">Unable to display content. Please try again later.</string>

    <string name="programguide_day_yesterday">Yesterday</string>
    <string name="programguide_day_today">Today</string>
    <string name="programguide_day_tomorrow">Tomorrow</string>

    <string name="programguide_part_of_day_morning">Morning</string>
    <string name="programguide_part_of_day_afternoon">Afternoon</string>
    <string name="programguide_part_of_day_evening">Evening</string>

    <string name="programguide_button_jump_to_live">Jump to live</string>

    <string name="programguide_day_selector_title">Select the desired day</string>
    <string name="programguide_day_time_selector_title">Select the desired time of day</string>
    <string name="programguide_content_description_large_thumbnail">Program thumbnail</string>
    <string name="programguide_content_description_channel_logo">Channel logo</string>
    <string name="programguide_content_description_dropdown_icon">Dropdown icon</string>
    <string name="programguide_content_description_menu">Hoofdmenu</string>
    <string name="programguide_header_app_title">Nexus TV Gids</string>
    <string name="programguide_header_guide_date_label">TV-gids voor</string>
</resources>
