<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020, Egeniq
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/programguide_constraint_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/programguide_header_background"
    tools:ignore="Overdraw">

    <ImageView
        android:id="@+id/programguide_header_logo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="@dimen/programguide_page_left_padding"
        android:src="@drawable/programguide_logo"
        android:contentDescription="@string/programguide_header_app_title"
        app:layout_constraintBottom_toTopOf="@id/programguide_time_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/programguide_top_margin" />

    <include
        android:id="@+id/programguide_day_filter"
        layout="@layout/programguide_item_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@id/programguide_time_row"
        app:layout_constraintStart_toEndOf="@id/programguide_header_logo"
        app:layout_constraintTop_toTopOf="@id/programguide_top_margin" />

    <include
        android:id="@+id/programguide_time_of_day_filter"
        layout="@layout/programguide_item_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/programguide_filter_spacing"
        app:layout_constraintBottom_toTopOf="@id/programguide_time_row"
        app:layout_constraintStart_toEndOf="@id/programguide_day_filter"
        app:layout_constraintTop_toTopOf="@id/programguide_top_margin" />

    <Button
        android:id="@+id/programguide_jump_to_live"
        style="@style/ProgramGuide.Button.JumpToLive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/programguide_filter_spacing"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/programguide_button_jump_to_live"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/programguide_time_row"
        app:layout_constraintStart_toEndOf="@id/programguide_time_of_day_filter"
        app:layout_constraintTop_toTopOf="@id/programguide_top_margin" />

    <LinearLayout
        android:id="@+id/programguide_header_guide_date_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start|center_vertical"
        android:layout_marginStart="@dimen/programguide_header_date_spacing"
        app:layout_goneMarginStart="@dimen/programguide_header_date_spacing"
        app:layout_constraintBottom_toTopOf="@id/programguide_time_row"
        app:layout_constraintStart_toEndOf="@id/programguide_jump_to_live"
        app:layout_constraintTop_toTopOf="@id/programguide_top_margin">

        <TextView
            android:id="@+id/programguide_header_guide_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/programguide_header_guide_date_label"
            android:textColor="@color/programguide_header_label_color"
            android:textSize="10sp"
            android:fontFamily="@font/open_sans_bold"
            android:letterSpacing="0.08"
            android:textAllCaps="true"
            android:singleLine="true" />

        <TextView
            android:id="@+id/programguide_header_guide_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/programguide_title_text_color_default"
            android:textSize="14sp"
            android:fontFamily="@font/open_sans_bold"
            android:singleLine="true"
            tools:text="Vrijdag 29 augustus 2026" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/programguide_header_right_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginEnd="@dimen/programguide_page_left_padding"
        app:layout_constraintBottom_toTopOf="@id/programguide_time_row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/programguide_top_margin">

        <ImageButton
            android:id="@+id/programguide_menu_button"
            android:layout_width="32dp"
            android:layout_height="28dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/programguide_button_background"
            android:contentDescription="@string/programguide_content_description_menu"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:scaleType="centerInside"
            android:src="@drawable/programguide_ic_menu"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end|center_vertical">

            <TextView
                android:id="@+id/programguide_header_app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/programguide_header_app_title"
                android:textColor="@color/programguide_header_app_title_color"
                android:textSize="14sp"
                android:fontFamily="@font/open_sans_bold"
                android:letterSpacing="0.05"
                android:singleLine="true" />

            <TextView
                android:id="@+id/programguide_header_current_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/programguide_time_text_color"
                android:textSize="12sp"
                android:fontFamily="@font/open_sans_regular"
                android:singleLine="true"
                tools:text="Ma 31 aug 2026 • 00:35" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/programguide_menu_visible_margin"
        android:layout_width="0dp"
        android:layout_height="@dimen/programguide_page_top_margin_menu_visible"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/programguide_current_time_indicator_top_offset"
        android:layout_width="0dp"
        android:layout_height="@dimen/programguide_current_time_indicator_top_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/programguide_time_row" />

    <View
        android:id="@+id/bottom_detail"
        android:layout_width="0dp"
        android:layout_height="@dimen/programguide_bottom_detail_height"
        android:background="@color/programguide_footer_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/programguide_detail_image"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_marginStart="@dimen/programguide_page_left_padding"
        android:contentDescription="@string/programguide_content_description_large_thumbnail"
        android:background="@drawable/programguide_tile_placeholder"
        android:src="@drawable/programguide_icon_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottom_detail" />

    <TextView
        android:id="@+id/programguide_detail_title"
        style="@style/ProgramGuide.Text.Detail.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="@dimen/programguide_page_left_padding"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/programguide_detail_image"
        app:layout_constraintTop_toTopOf="@id/programguide_detail_image"
        tools:text="EenVandaag" />

    <TextView
        android:id="@+id/programguide_detail_metadata"
        style="@style/ProgramGuide.Text.Detail.Metadata"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/programguide_detail_title"
        app:layout_constraintTop_toBottomOf="@id/programguide_detail_title"
        tools:text="EenVandaag • Wo 30 jan 20:00 • AVROTROS" />

    <TextView
        android:id="@+id/programguide_detail_description"
        style="@style/ProgramGuide.Text.Detail.Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/programguide_detail_title"
        app:layout_constraintTop_toBottomOf="@id/programguide_detail_metadata"
        tools:text="This is the description of the item.\nLine 2\nLine 3\nLine 4\nLine 5\nLine 6" />

    <View
        android:id="@+id/programguide_top_margin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/programguide_menu_visible_margin" />

    <View
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/programguide_content_background"
        app:layout_constraintBottom_toTopOf="@id/bottom_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/programguide_time_row" />

    <View
        android:id="@+id/focus_catcher"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ViewAnimator
        android:id="@+id/programguide_content_animator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inAnimation="@android:anim/fade_in"
        android:outAnimation="@android:anim/fade_out"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/background">

        <!-- Loading state -->
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

        <!-- Error state -->
        <TextView
            android:id="@+id/programguide_error_message"
            style="@style/ProgramGuide.ErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/programguide_error_fetching_content" />

        <!-- Data state -->
        <com.egeniq.androidtvprogramguide.ProgramGuideGridView
            android:id="@+id/programguide_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </ViewAnimator>

    <com.egeniq.androidtvprogramguide.timeline.ProgramGuideTimelineRow
        android:id="@+id/programguide_time_row"
        android:layout_width="0dp"
        android:layout_height="@dimen/programguide_time_row_height"
        android:layout_marginStart="@dimen/programguide_channel_column_width"
        android:layout_marginTop="60dp"
        android:alpha="0"
        android:fadingEdgeLength="20dp"
        android:requiresFadingEdge="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/programguide_top_margin"
        tools:alpha="1"
        tools:listitem="@layout/programguide_item_time" />

    <include
        android:id="@+id/programguide_current_date"
        layout="@layout/programguide_item_time"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/programguide_time_row_height"
        android:layout_marginStart="@dimen/programguide_page_left_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/programguide_time_row" />

    <include
        android:id="@+id/programguide_current_time_indicator"
        layout="@layout/programguide_item_time_indicator"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/programguide_channel_column_width"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/programguide_current_time_indicator_top_offset"
        tools:visibility="visible" />

    <View
        android:id="@+id/programguide_focus_catcher"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/programguide_version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/open_sans_regular"
        android:textColor="#55FFFFFF"
        android:textSize="11sp"
        android:gravity="end"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="v0.8.1" />

</androidx.constraintlayout.widget.ConstraintLayout>
